<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="#F1F1F1"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="6dp"
        android:padding="16dp"
        card_view:cardCornerRadius="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:foregroundGravity="center"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:scaleType="fitXY"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/title_placeholder"
                android:textColor="@color/colorIcons"
                />
            <TextView
                android:id="@+id/newsTitle"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thumbnail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/news_placeholder"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/newsInfo"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/sports_info_placeholder"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>